:bug: Active notes category dot not aligned, not always showing

--- a/src/assets/scss/module/notes.scss
+++ b/src/assets/scss/module/notes.scss
@@ -6,7 +6,7 @@
   content:"• ";
   display: inline-block;
   font-size: 30px;
-  left: -15px;
+  left: -10px;
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
